# motoman_ma2010_d500_waam_support

./: .gitignore  CMakeLists.txt  package.xml
config/: joint_names_ma2010_d500.yaml  ma2010_d500_motion_interface.yaml  robot_state_visualize.rviz
launch/: load_ma2010_d500.launch  robot_interface_streaming.launch  test_ma2010_d500.launch
meshes/: 15067-2_460mm_m.stl  base_plate_positioner_m.stl  fixture_plate_m.stl  floor_slab_m.stl  substrate_plate_m.stl  substrate_plate_temp_m.stl
urdf/: ma2010_d500.xacro  ma2010_d500_macro.xacro  world_macro.xacro
