<?xml version="1.0"?>
<package format="2">
 <name>motoman_ma2010_d500_waam_support</name>
 <version>0.0.1</version>
 <description>
  <p>
    This package contains configuration data, 3D models and launch files
    for a wire-arc additive manufacturing setup comprised of a Motoman MA2010
    manipulator and MotoPos D500 positioner, welding torch and other relevant
    features for path planning including collision detection.
  </p>
  <p>
    This package depends on the motoman_ma2010_support and
    motoman_motopos_d500_support packages.
  </p>
 </description>
 <author email="lehmann@ualberta.ca">Thomas Lehmann</author>
 <maintainer email="lehmann@ualberta.ca">Thomas Lehmann</maintainer>
 <license>BSD</license>
 <buildtool_depend>catkin</buildtool_depend>
 <test_depend>roslaunch</test_depend>
 <exec_depend>joint_state_publisher</exec_depend>
 <exec_depend>motoman_driver</exec_depend>
 <exec_depend>robot_state_publisher</exec_depend>
 <exec_depend>rviz</exec_depend>
 <exec_depend>xacro</exec_depend>
 <export>
  <architecture_independent/>
 </export>
</package>
